// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-on-mobile"
    >
      Expenses
    </div>
    <div
      className="show-on-desktop"
    >
      Expense
    </div>
    <div
      className="show-on-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item__message"
    >
      <span>
        No Expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`should return ExpenseList component with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-on-mobile"
    >
      Expenses
    </div>
    <div
      className="show-on-desktop"
    >
      Expense
    </div>
    <div
      className="show-on-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={200}
      createdAt={-345600000}
      description="apartment"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={500}
      createdAt={345600000}
      description="rent"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={300}
      createdAt={0}
      description="hangout"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
